--- a/src/index.njk
+++ b/src/index.njk
@@ -13,10 +13,8 @@ eleventyNavigation:
   <div class="container-fluid py-2">
     <h1 class="display-5 fw-bold">{{ site.title }}</h1>
     <p class="col-md-10 fs-4 mb-0 pt-2">
-      Get started with the simple and awesome static site generator Eleventy and Bootstrap 5.
-      <!-- This template
-      contains Bootstrap (via npm), LaravelMix for compiling JS/SCSS and some small additions like eleventy-navigation.
-      Other than that - just plain Bootstrap 5 and Eleventy. --><br /><br />
+      Jesus liebt dich!
+<br /><br />
     </p>
     <a class="btn btn-primary btn-lg mt-2" href="https://github.com/mandrasch/11ty-plain-bootstrap5">
       See template on GitHub
