--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -23,6 +23,6 @@
     </main>
 
     {% include "footer.njk" %}
-    <script type="text/javascript" src="{{ '/dist/app.js' | url }}"></script>
+    <script type="text/javascript" src="/dist/app.js"></script>
   </body>
 </html>
