--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -4,4 +4,5 @@
     <a href="https://github.com/mandrasch/11ty-plain-bootstrap5">GitHub</a> ·
     <a href="{{ '/pages/imprint' | url }}">Imprint</a> · <a href="{{ '/pages/privacy' | url }}">Privacy</a>
   </p>
+  <p>Bernhard war da!</p>
 </footer>
