--- a/src/index.njk
+++ b/src/index.njk
@@ -43,7 +43,7 @@ eleventyNavigation:
 <div class="row align-items-md-stretch">
   <div class="col-md-6 mt-3">
     <div class="h-100 p-5 text-white bg-dark rounded-3">
-      <h2>Lorem ipsum dolor sit</h2>
+      <h2>News</h2>
       <p>
         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua.
