--- a/src/index.njk
+++ b/src/index.njk
@@ -48,7 +48,7 @@ eleventyNavigation:
         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua.
       </p>
-      <a href="{{ 'pages/examples' | url }}" class="btn btn-outline-light">Examples</a>
+      <a href="newsroom.html" class="btn btn-outline-light">Examples</a>
     </div>
   </div>
   <div class="col-md-6 mt-3">
