--- a/src/index.njk
+++ b/src/index.njk
@@ -43,27 +43,25 @@ eleventyNavigation:
 <div class="row align-items-md-stretch">
   <div class="col-md-6 mt-3">
     <div class="h-100 p-5 text-white bg-dark rounded-3">
-      <h2>News</h2>
+      <h2>Newsroom</h2>
       <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua.
+        Hier kommen immer News über Tirol. Ob Konzert oder Eröffnung, vieles kommt hier hin.
       </p>
-      <a href="newsroom.html" class="btn btn-outline-light">Examples</a>
+      <a href="newsroom.html" class="btn btn-outline-light">Newsroom</a>
     </div>
   </div>
   <div class="col-md-6 mt-3">
     <div class="h-100 p-5 border rounded-3" style="background-color: #ff7979">
-      <h2>Sed diam nonumy</h2>
+      <h2>Ausflüge</h2>
       <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Hier werden wir immer wieder verschiedene Ausflüge hochladen.
       </p>
       <a href="{{ 'pages/another_site ' | url }}" class="btn btn-outline-dark">Another site</a>
     </div>
   </div>
   <div class="col-md-6 mt-3">
     <div class="h-100 p-5 border rounded-3" style="background-color: #f6e58d">
-      <h2>Consetetur sadipscing elitr</h2>
+      <h2>Nico Schwindler</h2>
       <p>
         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
