--- a/src/index.njk
+++ b/src/index.njk
@@ -40,12 +40,29 @@ eleventyNavigation:
   </div>
 </div>
 
-<div class="row mt-3">
-  <div class="col-12">
-    <div class="img-fit-cover-container rounded-3 bg-light">
-      {% image "./src/assets/images/bergsee.jpeg", "View from top of a mountain onto a sea and another mountain in
-      austria." %}
+<div class="row align-items-md-stretch">
+  <div class="col-md-6 mt-3">
+    <div class="h-100 p-5 text-white bg-dark rounded-3">
+      <h2>Newsroom</h2>
+      <p>
+        Hier kommen immer News über Tirol. Ob Konzert oder Eröffnung, vieles kommt hier hin.
+      </p>
+      <a href="newsroom.html" class="btn btn-outline-light">Newsroom</a>
     </div>
+  </div>
+  <div class="col-md-6 mt-3">
+    <div class="h-100 p-5 border rounded-3" style="background-color: #ff7979">
+      <h2>Ausflüge</h2>
+      <p>
+        Hier werden wir immer wieder verschiedene Ausflüge hochladen.
+      </p>
+      <a href="{{ 'pages/another_site ' | url }}" class="btn btn-outline-dark">Another site</a>
+    </div>
+  </div>
+ 
+      <!-- Modal -->
+     
+    
   </div>
 </div>
 
