--- a/src/index.njk
+++ b/src/index.njk
@@ -56,20 +56,13 @@ eleventyNavigation:
       <p>
         Hier werden wir immer wieder verschiedene Ausflüge hochladen.
       </p>
-      <a href="{{ 'pages/another_site ' | url }}" class="btn btn-outline-dark">Another site</a>
+      <a href="{{ 'pages/another_site ' | url }}" class="btn btn-outline-dark">Ausflüge</a>
     </div>
   </div>
  
       <!-- Modal -->
      
     
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-12 py-5 text-center">
-    See <a href="https://github.com/mandrasch/11ty-plain-bootstrap5/" target="_blank">11ty-plain-bootstrap5</a> on
-    GitHub for all information.
   </div>
 </div>
 
