--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -1,8 +1,6 @@
 <footer class="container">
   <p class="float-end"><a href="#">Back to top</a></p>
   <p>
-    <a href="https://github.com/mandrasch/11ty-plain-bootstrap5">GitHub</a> ·
-    <a href="{{ '/pages/imprint' | url }}">Imprint</a> · <a href="{{ '/pages/privacy' | url }}">Privacy</a>
+    (C) 2022 Famirol
   </p>
-  <p>Bernhard war da!</p>
 </footer>
