Fix Brnjamins errors

--- a/src/ausfluege.njk
+++ b/src/ausfluege.njk
@@ -1,12 +1,12 @@
 ---
 meta:
   lang: de
-  title: Home
+  title: Ausflüge
   image: "/assets/images/open-graph/teaser.jpeg"
   description: Ausflüge und News von und in ganz Tirol
 layout: base
 eleventyNavigation:
-  key: Home
+  key: Ausflüge
   order: 3
 ---
 
