--- a/src/index.njk
+++ b/src/index.njk
@@ -48,7 +48,7 @@ eleventyNavigation:
       <p>
         Hier kommen immer News über Tirol. Ob Konzert oder Eröffnung, vieles kommt hier hin.
       </p>
-      <a href="newsroom.html" class="btn btn-outline-light">Newsroom</a>
+      <a href="/newsroom/" class="btn btn-outline-light">Newsroom</a>
     </div>
   </div>
   <div class="col-md-6 mt-3">
