Fix Benjamin handy view error

--- a/src/index.njk
+++ b/src/index.njk
@@ -24,7 +24,7 @@ eleventyNavigation:
       Famirol Discord-Server
     </a>
     <a
-      class="btn btn-primary"
+      class="btn btn-primary mt-2"
       href="https://discord.gg/peuhdejRgX"
       target="_blank"
     >
