--- a/src/index.njk
+++ b/src/index.njk
@@ -18,13 +18,13 @@ eleventyNavigation:
 <br /><br />
     </p>
     <a 
-    class="btn btn-primary" 
+    class="btn btn-primary mb-2" 
       href="https://discord.gg/qTuFXJ3TGH"
       target="_blank">
       Famirol Discord-Server
     </a>
     <a
-      class="btn btn-primary mt-2"
+      class="btn btn-primary mb-2"
       href="https://discord.gg/peuhdejRgX"
       target="_blank"
     >
