--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -1,6 +1,9 @@
 <footer class="container">
-  <p class="float-end"><a href="#">Back to top</a></p>
+  <button type="button" class="btn btn-danger float-end"><a href="#" class="link-warning">Nach oben</a></button>
+
   <p>
-    (C) 2022 Famirol
+    © 2022 Famirol
   </p>
+  <p></p>
+  <p><a a href="ausfluege">.</a></p>
 </footer>
