--- a/src/index.njk
+++ b/src/index.njk
@@ -18,13 +18,13 @@ eleventyNavigation:
 <br /><br />
     </p>
     <a 
-    class="btn btn-primary mb-2" 
+    class="btn btn-primary mb-3" 
       href="https://discord.gg/qTuFXJ3TGH"
       target="_blank">
       Famirol Discord-Server
     </a>
     <a
-      class="btn btn-primary mb-2"
+      class="btn btn-primary mb-3"
       href="https://discord.gg/peuhdejRgX"
       target="_blank"
     >
@@ -48,20 +48,34 @@ eleventyNavigation:
       <p>
         Hier kommen immer News über Tirol. Ob Konzert oder Eröffnung, vieles kommt hier hin.
       </p>
-      <a href="/newsroom/" class="btn btn-outline-light">Newsroom</a>
+      <button type="button" class="btn btn-primary position-relative">
+        <a href="/newsroom" class="link-warning">Newsroom</a>
+        <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+          <span class="visually-hidden">Neue Nachrichten</span>
+        </span>
+      </button>
     </div>
   </div>
   <div class="col-md-6 mt-3">
     <div class="h-100 p-5 border rounded-3" style="background-color: #ff7979">
-      <h2>Ausflüge</h2>
+      <h2>Ausflug der Woche</h2>
       <p>
-        Hier werden wir immer wieder verschiedene Ausflüge hochladen.
+        Hier ist der Ausflug der Woche. Diese Woche ist es ein Ausflug in die Kundler Klamm.
+        Was es da wohl zu sehen gibt?
       </p>
-      <a href="{{ 'pages/another_site ' | url }}" class="btn btn-outline-dark">Ausflüge</a>
+      <p> Probiere es doch einfach aus und klicke auf den Button.</p>
+      <a href="/pages/ausfluege/2022-08-20-KundlerKlamm/" class="btn btn-outline-dark">Kundler Klamm</a>
     </div>
   </div>
  
-      <!-- Modal -->
+  <div class="row mt-3">
+    <div class="col-12">
+      <div class="img-fit-cover-container rounded-3 bg-light">
+        {% image "./src/assets/images/tirol.jpg", "View from top of a mountain onto a sea and another mountain in
+        austria." %}
+      </div>
+    </div>
+  </div>
      
     
   </div>
