--- a/src/newsroom.njk
+++ b/src/newsroom.njk
@@ -17,29 +17,11 @@ eleventyNavigation:
   <div class="card-body">
     <h5 class="card-title">Famirol</h5>
     <p class="card-text">Wenn du Famirol schon früher gekannt hast, hat es eine andere schlechtere Website gegeben. Jetzt gibt es eine bessere. Du kannst jetzt im Newsroom die allerneuesten News sehen und in Ausflüge immer zu den Ausflügen klicken. Außerdem gibt es noch einen Wochentipp für einen Ausflug auf der Home-Seite. Viel Spaß!</p>
-    <a href="index.njk" class="btn btn-primary">Home-Seite</a>
+    <a href="/" class="btn btn-primary">Home-Seite</a>
   </div>
 </div>
 
-<h2>Gut zu Wissen für Admins und Mods:</h2>
-<!--Immer wieder untiges einfügen:-->
-
-<div class="card" aria-hidden="true">
-  <div class="card-body">
-    <h5 class="card-title placeholder-glow">
-      <span class="placeholder col-6"></span>
-    </h5>
-    <p class="card-text placeholder-glow">
-      <span class="placeholder col-7"></span>
-      <span class="placeholder col-4"></span>
-      <span class="placeholder col-4"></span>
-      <span class="placeholder col-6"></span>
-      <span class="placeholder col-8"></span>
-      <span class="placeholder col-8"></span>
-    </p>
-    <p><span class="placeholder col-8"></span></p>
-    <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
-  </div>
+<!--Vielleicht noch Admin Sachen dazu-->
 
 
 
