--- a/src/index.njk
+++ b/src/index.njk
@@ -60,11 +60,10 @@ eleventyNavigation:
     <div class="h-100 p-5 border rounded-3" style="background-color: #ff7979">
       <h2>Ausflug der Woche</h2>
       <p>
-        Hier ist der Ausflug der Woche. Diese Woche ist es ein Ausflug in die Kundler Klamm.
-        Was es da wohl zu sehen gibt?
+       Herbstkonzert am 05.11.2022!
       </p>
-      <p> Probiere es doch einfach aus und klicke auf den Button.</p>
-      <a href="/pages/ausfluege/2022-08-20-KundlerKlamm/" class="btn btn-outline-dark">Kundler Klamm</a>
+      <p> Endlich wieder ein Herbstkonzert der MK Völs. Für mehr INfos klicke auf den</p>
+      <a href="https://famirol.github.io/herbstkonzert/" class="btn btn-outline-dark">Herbstkonzert</a>
     </div>
   </div>
  
