Bild statt Text

--- a/src/herbstkonzert.njk
+++ b/src/herbstkonzert.njk
@@ -23,19 +23,11 @@ eleventyNavigation:
 <p>Freiweillige Spenden sind aber dennoch erbeten, denn das ganze kostet ja alles auch etwas.</p>
 <p></p>
 <p>Hier noch die Stücke:</p>
-<p>   1. Teil:</p>
-<p>1. Das große Tor von Kiew</p>
-<p>2. The Witch and The Saint</p>
-<p>3. Concertino for Marimba</p>
-<p>4.Blas´ Musik in die Welt</p>
-<p>Codetta Völs</p>
+<div class="img-fit-cover-container rounded-3 bg-light">
+  {% image "./src/assets/images/.programm.jpg", "Lieder, die wir spielen"
+  austria." %}
+</div>
 <p>Codetta Völs ist eine kleine Jungmusikantengruppe. Ich spiele dort zwar auch mit, weiß aber noch nicht was wir spielen. (Heute 03.11.2022 ist um 18:30 Generalprobe. Jetzt ist es 17:57 Uhr.)</p>
-<p>   2. Teil:</p>
-<p>1. The Lion King</p>
-<p>2. Gold von den Sternen</p>
-<p>3. Mame Medly</p>
-<p>4. A Fistful of Dollars</p>
-<p>5. Santana</p>
 <p></p>
 <p>Noch ein paar Infos:</p>
 <iframe width="1170" height="658" src="https://www.youtube.com/embed/MsBVm5eZY9w" title="2022 Herbstkonzert" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
