--- a/src/index.njk
+++ b/src/index.njk
@@ -58,11 +58,11 @@ eleventyNavigation:
   </div>
   <div class="col-md-6 mt-3">
     <div class="h-100 p-5 border rounded-3" style="background-color: #ff7979">
-      <h2>Ausflug der Woche</h2>
+      <h2>Herbstkonzert</h2>
       <p>
        Herbstkonzert am 05.11.2022!
       </p>
-      <p> Endlich wieder ein Herbstkonzert der MK Völs. Für mehr INfos klicke auf den</p>
+      <p> Endlich wieder ein Herbstkonzert der MK Völs. Für mehr Infos klicke auf den</p>
       <a href="https://famirol.github.io/herbstkonzert/" class="btn btn-outline-dark">Herbstkonzert</a>
     </div>
   </div>
