--- a/src/herbstkonzert.njk
+++ b/src/herbstkonzert.njk
@@ -23,9 +23,35 @@ eleventyNavigation:
 <p>Freiweillige Spenden sind aber dennoch erbeten, denn das ganze kostet ja alles auch etwas.</p>
 <p></p>
 <p>Hier noch die Stücke:</p>
-<div class="img-fit-cover-container rounded-3 bg-light">
-  {% image "./src/assets/images/.programm.jpg", "Lieder, die wir spielen"
-  austria." %}
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/src/assets/images/programm.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/src/assets/images/mitglieder.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/src/assets/images/einladung.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <div class="carousel-item">
+    <img src="/src/assets/images/musikkapelle.png" class="d-block w-100" alt="...">
+  </div>
+</div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 <p>Codetta Völs ist eine kleine Jungmusikantengruppe. Ich spiele dort zwar auch mit, weiß aber noch nicht was wir spielen. (Heute 03.11.2022 ist um 18:30 Generalprobe. Jetzt ist es 17:57 Uhr.)</p>
 <p></p>
