--- a/src/herbstkonzert.njk
+++ b/src/herbstkonzert.njk
@@ -28,6 +28,7 @@ eleventyNavigation:
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -46,11 +47,11 @@ eleventyNavigation:
 </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
+    <span class="visually-hidden">Voriges</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
+    <span class="visually-hidden">Nächstes</span>
   </button>
 </div>
 <p>Codetta Völs ist eine kleine Jungmusikantengruppe. Ich spiele dort zwar auch mit, weiß aber noch nicht was wir spielen. (Heute 03.11.2022 ist um 18:30 Generalprobe. Jetzt ist es 17:57 Uhr.)</p>
