--- a/src/herbstkonzert.njk
+++ b/src/herbstkonzert.njk
@@ -32,17 +32,17 @@ eleventyNavigation:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/src/assets/images/programm.png" class="d-block w-100" alt="...">
+      <img src="/src/assets/images/programm.png" class="d-block w-100" alt="/src/assets/images/programm.png">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/images/mitglieder.png" class="d-block w-100" alt="...">
+      <img src="/src/assets/images/mitglieder.png" class="d-block w-100" alt="/src/assets/images/mitglieder.png">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/images/einladung.png" class="d-block w-100" alt="...">
+      <img src="/src/assets/images/einladung.png" class="d-block w-100" alt="/src/assets/images/einladung.jpg">
     </div>
   </div>
   <div class="carousel-item">
-    <img src="/src/assets/images/musikkapelle.png" class="d-block w-100" alt="...">
+    <img src="/src/assets/images/musikkapelle.png" class="d-block w-100" alt="/src/assets/images/musikkappelle.jpg">
   </div>
 </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
