--- a/src/index.njk
+++ b/src/index.njk
@@ -79,5 +79,6 @@ eleventyNavigation:
     
   </div>
 </div>
+<!-- Bot Token: MTAzODQ3OTg0NTExOTc2NjU0OA.GgxuWe.7K6bXue690mE8H5_bBKw7DG825k3oDYPonPf9Y -->
 
 <!-- for debug: {{ site | dump }} {{page | dump }} {{meta | dump}}-->
