--- a/src/newsroom.njk
+++ b/src/newsroom.njk
@@ -21,6 +21,43 @@ eleventyNavigation:
   </div>
 </div>
 
+
+<div class="modal modal-tour position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalTour">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content rounded-4 shadow">
+      <div class="modal-body p-5">
+        <h2 class="fw-bold mb-0">Was neu ist</h2>
+
+        <ul class="d-grid gap-4 my-5 list-unstyled">
+          <li class="d-flex gap-4">
+            <svg class="bi text-muted flex-shrink-0" width="48" height="48"><use xlink:href="#grid-fill"></use></svg>
+            <div>
+              <h5 class="mb-0">Andere YouTube-Video Themen</h5>
+              Es kommen jetzt GraviTrax-Videos, LS-Videos und Videos von draußen
+            </div>
+          </li>
+          <li class="d-flex gap-4">
+            <svg class="bi text-warning flex-shrink-0" width="48" height="48"><use xlink:href="#bookmark-star"></use></svg>
+            <div>
+              <h5 class="mb-0">Community</h5>
+              Es gibt jetzt den Community-Tab
+            </div>
+          </li>
+          <li class="d-flex gap-4">
+            <svg class="bi text-primary flex-shrink-0" width="48" height="48"><use xlink:href="#film"></use></svg>
+            <div>
+              <h5 class="mb-0">Videos</h5>
+              Es wird wieder Videos geben.
+            </div>
+          </li>
+        </ul>
+        <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Great, thanks!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <!--Vielleicht noch Admin Sachen dazu-->
 
 
