--- a/src/herbstkonzert.njk
+++ b/src/herbstkonzert.njk
@@ -7,7 +7,6 @@ meta:
 layout: base
 eleventyNavigation:
   key: Herbstkonzert
-  order: 2
 ---
 <h1>HERBSTKONZERT DER MK VÖLS!</h1>
 <p></p>
@@ -31,22 +30,22 @@ eleventyNavigation:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/src/assets/images/programm.png" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/images/mitglieder.png" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/images/einladung.png" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Voriges</span>
+    <span class="visually-hidden">Prev</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Nächstes</span>
+    <span class="visually-hidden">Next</span>
   </button>
 </div>
 <p>Codetta Völs ist eine kleine Jungmusikantengruppe. Ich spiele dort zwar auch mit, weiß aber noch nicht was wir spielen. (Heute 03.11.2022 ist um 18:30 Generalprobe. Jetzt ist es 17:57 Uhr.)</p>
