--- a/src/newsroom.njk
+++ b/src/newsroom.njk
@@ -22,7 +22,6 @@ eleventyNavigation:
 </div>
 
 
-<div class="modal modal-tour position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalTour">
   <div class="modal-dialog" role="document">
     <div class="modal-content rounded-4 shadow">
       <div class="modal-body p-5">
@@ -51,11 +50,11 @@ eleventyNavigation:
             </div>
           </li>
         </ul>
-        <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Great, thanks!</button>
+        <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Cool, Danke!</button>
       </div>
     </div>
   </div>
-</div>
+
 
 
 <!--Vielleicht noch Admin Sachen dazu-->
