--- a/src/scss/test.njk
+++ b/src/scss/test.njk
@@ -1,11 +1,11 @@
 ---
 meta:
-  title: Testlein
+  title: Hallo
 layout: base
 eleventyNavigation:
   key: Hallilöchen
   order: 5
-  link: /dennis
+  link: discord
 ---
 
-<h1>Hallilöchen Dennislein!</h1>
+<h1>Test</h1>
