--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,7 @@ eleventyNavigation:
   <div class="container-fluid py-2">
     <h1 class="display-5 fw-bold">{{ site.title }}</h1>
     <p class="col-md-10 fs-4 mb-0 pt-2">
-      Ausflüge und News von und in ganz Tirol
+      <a href="bild.exe">Ausflüge</a> und News von und in ganz Tirol
 <br /><br />
     </p>
     <a 
