--- a/src/anton-ist-dumm.njk
+++ b/src/anton-ist-dumm.njk
@@ -7,4 +7,4 @@ eleventyNavigation:
   order: 3
   link: anton-ist-dumm
 
-  <a href="../bild.exe">Hallo Anton</a>
+<h1>Sag mir den Namen von deinem Youtube-Kanal!</h1>
